Change font color to resolve poor contrast from Wave Testing result

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,7 @@
   }
   
   .start-btn, .next-btn {
+    color: black;
     font-size: 1.5rem;
     font-weight: bold;
     padding: 10px 20px;
